# fission_fusion

./: CMakeLists.txt  README.md  package.xml
.git-rewrite/: backup-refs  index  message  parse  revs
apptainer/: container_scrip.sh  fission_fusion.def  run_cluster.sh  submit_task.sh  test.sh
config/: config.yaml
controllers/: CMakeLists.txt
data/: groupsize_data.csv  groupsize_data_bot0.csv  groupsize_data_bot1.csv  groupsize_data_bot10.csv  groupsize_data_bot11.csv  groupsize_data_bot12.csv  groupsize_data_bot13.csv  groupsize_data_bot14.csv  groupsize_data_bot15.csv  groupsize_data_bot16.csv  groupsize_data_bot17.csv  groupsize_data_bot18.csv  groupsize_data_bot19.csv  groupsize_data_bot2.csv  groupsize_data_bot20.csv  groupsize_data_bot21.csv  groupsize_data_bot22.csv  groupsize_data_bot23.csv  groupsize_data_bot24.csv  groupsize_data_bot25.csv  groupsize_data_bot26.csv  groupsize_data_bot27.csv  groupsize_data_bot28.csv  groupsize_data_bot29.csv  groupsize_data_bot3.csv  groupsize_data_bot30.csv  groupsize_data_bot31.csv  groupsize_data_bot32.csv  groupsize_data_bot33.csv  groupsize_data_bot34.csv  groupsize_data_bot35.csv  groupsize_data_bot36.csv  groupsize_data_bot37.csv  groupsize_data_bot38.csv  groupsize_data_bot39.csv  groupsize_data_bot4.csv  groupsize_data_bot40.csv  groupsize_data_bot41.csv  groupsize_data_bot5.csv  groupsize_data_bot6.csv  (+3 more)
experiments/: counting_experments.argos  fission_fusion.argos  information_dissemination.argos
launch/: navigate_to_pose.launch.py  run.launch.py  rviz.rviz
launch/rviz/: defaul.rviz
lib/: README.md
log/: latest_list
loop_functions/: CMakeLists.txt
msg/: Position.msg
src/: P_controller.cpp  SDRM_controller.cpp  SFFM.cpp  controller.cpp  controller.h  extrema_propagation.cpp  main.cpp  skybat_controller.cpp  system_init.h  visualization.cpp
